[package]
name = "azh-jvm" # 放你自己想要的名字，build时二进制包的名字
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
mockall = "0.11.3"
zip = {version = "0.6.4", default-features = false, features = ["deflate"]}
